--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -12,11 +12,36 @@
 }
 
 @font-face {
-  font-family: kilo;
+  font-family: Kilo;
   src: url("font/Kilo.otf") format("opentype");
 }
 
 @font-face {
-  font-family: jiro;
+  font-family: Jiro;
   src: url("font/Jiro.otf") format("opentype");
+}
+
+@font-face {
+  font-family: Hexa;
+  src: url("font/HexaDEC.otf") format("opentype");
+}
+
+@font-face {
+  font-family: Chin;
+  src: url("font/chintzy.ttf") format("opentype");
+}
+
+@font-face {
+  font-family: Digi;
+  src: url("font/DigiSYS.ttf") format("opentype");
+}
+
+@font-face {
+  font-family: BSP;
+  src: url("font/BSP.ttf") format("opentype");
+}
+
+@font-face {
+  font-family: Cry;
+  src: url("font/crystal.ttf") format("opentype");
 }
