--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -6,6 +6,9 @@
     @apply z-10 py-3 px-4 bg-gradient-to-br from-teal-300 to-blue-300 text-white font-semibold rounded-full shadow-md hover:bg-blue-400 hover:border-r-4 hover:border-t-4 hover:border-l-4 hover:border-b-4 transition-all border-blue-100 focus:outline-none focus:ring-2 focus:ring-white;
   }
 
+  /* Custom Image Loader */
+
+  /* Other stuff */
   @font-face {
     font-family: NJP-Black;
     src: url("font/NotoSerifJP-Black.otf") format("opentype");
